--- a/config/database.yml
+++ b/config/database.yml
@@ -1,11 +1,14 @@
 
 #
 default: &default
-  adapter: mysql2
-  username: root
-  password: root
+  adapter: postgresql
+  encoding: unicode
+  host: localhost
   pool: 5
   timeout: 5000
+  port: 5432
+  username: postgres
+  password: postgres
 
 development:
   <<: *default
@@ -18,7 +21,7 @@ development:
 #   <<: *default
 #   database: db/test.sqlite3
 
-# production:
-#   <<: *default
-#   database: db/production.sqlite3
+production:
+  <<: *default
+  database: tickets_production
 
